--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
   "engines": {
     "node": ">= 8.0"
   },
+  "publishConfig": {
+    "registry": "http://registry.npmjs.org",
+    "access": "public"
+  },
   "licenses": [
     {
       "type": "MIT"
