--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es2017",
+        "target": "es2015",
         "noImplicitAny": false,
         "sourceMap": false,
         "rootDir":"./src",
-        "outDir":"./dist",
+        "outDir":"./app",
         "watch":false,
         "declaration": true,
         "alwaysStrict": true,
