--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@umajs/model",
   "description": "model validate",
-  "version": "0.2.0",
+  "version": "1.0.0",
+  "main": "lib/index.js",
   "files": [
-    "app"
+    "lib"
   ],
   "dependencies": {},
   "devDependencies": {
