--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "noImplicitAny": false,
         "sourceMap": false,
         "rootDir":"./src",
-        "outDir":"./app",
+        "outDir":"./lib",
         "watch":false,
         "declaration": true,
         "alwaysStrict": true,
