fix:export model in index.ts

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${workspaceRoot}/node_modules/ts-node/dist/bin.js",
             "args": [
-                "test/index.ts"
+                "src/__test__/index.ts"
             ],
             "cwd": "${workspaceRoot}",
             "protocol": "inspector"
