--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@umajs/model",
-  "description": "model validate",
-  "version": "1.0.4",
+  "description": "model validate, model schema, json schema",
+  "keywords": ["model", "model validate", "model shema", "json schema"],
+  "version": "1.0.5",
   "main": "lib/index.js",
   "files": [
     "lib"
