--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "esnext",
         "target": "es2015",
         "noImplicitAny": false,
         "sourceMap": false,
         "rootDir":"./src",
         "outDir":"./lib",
         "watch":false,
+        "inlineSourceMap": true,
         "declaration": true,
         "alwaysStrict": true,
         "removeComments": true,
