--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "fix": "esw src --fix --ext .ts",
     "lint": "eslint src --ext .ts",
     "lint-w": "esw src --clear --color -w --ext .ts",
-    "build-w": "rollup -c -w",
-    "start": "parallelshell 'npm run lint-w' 'npm run build-w'",
+    "dev": "rollup -c -w",
+    "start": "parallelshell 'npm run lint-w' 'npm run dev'",
     "prebuild": "npm run lint",
     "build": "NODE_ENV=production rollup -c",
     "prepublish": "npm run build"
