--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "module": "CommonJS",
-        "target": "es2015",
+        "target": "ES5",
         "noImplicitAny": false,
         "sourceMap": false,
         "rootDir":"./src",
