--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "model shema",
     "json schema"
   ],
-  "version": "1.0.9",
+  "version": "1.0.10",
   "main": "lib/index.js",
   "files": [
     "lib"
@@ -49,6 +49,10 @@
   "publishConfig": {
     "registry": "http://registry.npmjs.org",
     "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/umajs/model.git"
   },
   "licenses": [
     {
