--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "p-shells": "^3.0.3",
     "rollup": "^2.44.0",
     "rollup-plugin-terser": "^7.0.2",
+    "ts-node": "^10.2.0",
     "typescript": "^4.2.3"
   },
   "scripts": {
